# agent

./: .gitignore  CLAUDE.md  Dockerfile  Taskfile.yml  docker-compose.yml  go.mod  go.sum  sample_receipt.html
cmd/: main.go
internal/application/order/: service.go
internal/application/printer/: manager.go  service.go  status.go
internal/application/retention/: retention.go
internal/config/: config.go
internal/domain/order/: order.go  repo.go  status.go
internal/domain/printer/: config.go  errors.go  printer.go
internal/infra/database/: pool.go
internal/infra/database/models/: models.go  querier.go  query.sql.go
internal/infra/database/repositories/: order_repo.go  printer_config_repo.go  settings_repo.go
internal/infra/notify/: notify.go
internal/infra/printer/escpos/: printer.go
internal/infra/sse/: client.go
internal/infra/ssebroker/: broker.go
internal/infrastructure/mainclient/: client.go  mainclient.go
internal/infrastructure/notify/: notify.go
internal/infrastructure/printer/escpos/: printer.go
internal/infrastructure/sqs/: consumer.go
internal/infrastructure/sse/: client.go
internal/migrate/: migrate.go
internal/migrate/sql/: 00001_initial_schema.sql  00002_default_auto_accept_off.sql  00003_printer_configs.sql
internal/observability/: meters.go  otel.go  zlog.go
internal/store/: store.go
internal/transport/: server.go
nginx/: index.html  nginx.conf
sql/: query.sql  schema.sql
tests/: conftest.py  pyproject.toml  test_http_api.py  test_printer_detect.py  test_sse_envelope.py
(+1 files in other folders)
